--- a/pmx_passtrough/tasks/grub_conf.yml
+++ b/pmx_passtrough/tasks/grub_conf.yml
@@ -4,7 +4,7 @@
   ansible.builtin.lineinfile:
     path: "{{ grub_path }}/grub"
     regexp: '^GRUB_CMDLINE_LINUX=""'
-    line: 'GRUB_CMDLINE_LINUX="quiet intel_iommu=on hugepagesz=1G default_hugepagesz=2M iommu=pt pcie_acs_override=downstream multifunction vfio_iommu_type1.allow_unsafe_interrupts=1 vfio-pci.ids=10de:1f82,10de:10fa,10de:1040,10de:0e08,1033:0194,1b21:2142,8086:a2af disable_vga=1 nofb nomodeset video=efifb:off"'
+    line: 'GRUB_CMDLINE_LINUX="{{ grub_cmdline_settings_part1 }} vfio-pci.ids={{ nv_vga_controller }},{{ nv_audio_device }},{{ nec_usb_controller_pci }},{{ asmedia_usb_controller_mb }},{{ intel_usb_controller_mb }} {{ disable_vga }} {{ grub_cmdline_settings_part2 }}"'
   register: grub_result
 
 - name: Update initramfs
