--- a/pmx_zfs/tasks/main.yml
+++ b/pmx_zfs/tasks/main.yml
@@ -14,3 +14,14 @@
     block: |
       options zfs zfs_arc_max=1073741824 
       options zfs zfs_arc_min=536870912 
+
+- name: Check {{ zfs_pool_01 }} pool is mounted
+  ansible.builtin.shell: >
+    zpool status
+  register: zfs_pool_status
+
+- name: Import {{ zfs_pool_01 }} pool
+  ansible.builtin.shell: >
+    zpool import "{{ zfs_pool_01 }}"
+  when: "'no pools available' in zfs_pool_status.stderr_lines"
+
