--- a/pmx_passtrough/tasks/main.yml
+++ b/pmx_passtrough/tasks/main.yml
@@ -6,11 +6,5 @@
 - include: ignore_msrs_conf.yml
 - include: vfio_conf.yml
 - include: swapiness.yml
+- include: disable_logs.yml
 - include: remove_subs_pop.yml
-
-- name: Check 101 VM config is exists
-  stat:
-    path: "{{ vm_path }}/101.conf"
-  register: vm_conf
-
-
