--- a/site.yml
+++ b/site.yml
@@ -7,7 +7,8 @@
     ansible_python_interpreter: /usr/bin/python3
  
   roles:
-    - pmx_passtrough
-    - pmx_tailscale
-    - pmx_zfs
-    - pmx_nfs
+  #  - pmx_passtrough
+  #  - pmx_tailscale
+  #  - pmx_zfs
+  #  - pmx_nfs
+    - pmx_smb
