--- a/pmx_smb/tasks/main.yml
+++ b/pmx_smb/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
 # vars file for pmx_smb
-#- include: install_smb.yml
+- include: install_smb.yml
 - include: create_smb_user.yml
 - include: smb_config.yml
