--- a/pmx_zfs/tasks/import_zfs_pool.yml
+++ b/pmx_zfs/tasks/import_zfs_pool.yml
@@ -4,6 +4,7 @@
   ansible.builtin.shell: >
     zpool status
   register: zfs_pool_status
+  changed_when: "'no pools available' in zfs_pool_status.stderr_lines"
 
 - name: Import {{ zfs_pool_01 }} pool
   ansible.builtin.shell: >
