--- a/pmx_smb/tasks/smb_config.yml
+++ b/pmx_smb/tasks/smb_config.yml
@@ -13,37 +13,9 @@
   register: smb_backup_state
   when: smb_conf_bak.stat.exists == False
 
-- name: Disable samba logging
-  ansible.builtin.lineinfile:
-    path: "{{ smb_conf_path }}/smb.conf"
-    regexp: '^   log file = /var/log/samba/log.%m'
-    line: '   log file = /var/log/samba/%m.log'
-
-- name: Replace Share Definitions [home]
-  ansible.builtin.replace:
-    path: "{{ smb_conf_path }}/smb.conf"
-    after: '#======================= Share Definitions ======================='
-    before: '# By default, the home directories are exported read-only. Change the'
-    regexp: '^(.+)$'
-    replace: ';\1'
-  when: smb_backup_state.changed
-
-- name: Replace Share Definitions [printers]
-  ansible.builtin.replace:
-    path: "{{ smb_conf_path }}/smb.conf"
-    after: ';   directory mask = 0700'
-    before: '# Windows clients look for this share name as a source of downloadable'
-    regexp: '^(.+)$'
-    replace: ';\1'
-  when: smb_backup_state.changed
-
-- name: Replace Share Definitions [print$]
-  ansible.builtin.replace:
-    path: "{{ smb_conf_path }}/smb.conf"
-    after: '# printer drivers'
-    before: '# Uncomment to allow remote administration of Windows print drivers.'
-    regexp: '^(.+)$'
-    replace: ';\1'
+- name: Clear out smb.conf
+  ansible.builtin.shell: >
+    echo "" > "{{ smb_conf_path }}/smb.conf"
   when: smb_backup_state.changed
 
 - name: Set allowed hosts and shares
